<?xml version="1.0" encoding="utf-8"?>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto"
                android:layout_width="106dp"
                android:layout_height="96dp"></de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placa"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtKilometraje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometraje"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
